--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,7 @@
             class="md:flex md:flex-wrap"
             id="register"
           >
-            <fieldset
-              class="basis-2/4 grow md:pr-2"
-              name="account"
-              formnovalidate="formnovalidate"
-            >
+            <fieldset class="basis-2/4 grow md:pr-2" name="account">
               <legend class="text-xl">Your Account</legend>
               <div class="mt-3 space-y-1">
                 <label for="username">
@@ -130,11 +126,7 @@
               </div>
             </fieldset>
 
-            <fieldset
-              class="basis-2/4 grow md:pl-2 mt-3 md:mt-0"
-              name="profile"
-              formnovalidate="formnovalidate"
-            >
+            <fieldset class="basis-2/4 grow md:pl-2 mt-3 md:mt-0" name="profile">
               <legend class="text-xl">Your Profile</legend>
 
               <div class="mt-3 space-y-1">
@@ -151,7 +143,6 @@
                     name="birthday"
                     id="birthday"
                     class="rounded border-0 block p-2 font-sans grow"
-                    placeholder="tt.mm.jjjj"
                     required
                   />
                   <span class="block h-8 w-8 icon"></span>
@@ -162,18 +153,17 @@
               </div>
 
               <div class="mt-3 space-y-1">
-                <label for="profil-text ">
+                <label for="profile-text">
                   <span class="block font-bold text-slate-700">
                     Tell us something about yourself
                   </span>
                 </label>
                 <textarea
                   class="rounded border-0 block p-2 font-sans grow w-full"
-                  name="profil-text"
+                  name="profile-text"
                   id="profile-text"
                   rows="5"
                   maxlength="200"
-                  formnovalidate
                 ></textarea>
                 <div><span id="chars">200 </span><span> chars left</span></div>
               </div>
@@ -183,7 +173,7 @@
               <button
                 class="bg-yellow-400 p-4 rounded-md font-bold hover:bg-yellow-500 transition-all duration-300 m-auto block shadow-md"
                 type="submit"
-                formnovalidate="formnovalidate"
+                formnovalidate
               >
                 Register Now!
               </button>
@@ -192,7 +182,7 @@
         </div>
       </div>
       <div id="credits" class="text-center text-white mt-10 mb-10">
-        <p>made with ❤️ by Markus Hassenstein></p>
+        <p>made with ❤️ by Markus Hassenstein</p>
       </div>
     </div>
   </body>
